--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
         "/home/madhu/work/ros1/interbotix_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/site-packages",
         "/opt/ros/noetic/local/lib/python3/dist-packages"
-    ]
+    ],
+    "ros.distro": "noetic",
+    "C_Cpp.errorSquiggles": "disabled"
 }
